Fixed the shifting issue

--- a/_includes/css/book-component.css
+++ b/_includes/css/book-component.css
@@ -136,7 +136,7 @@ body {
 
 .buttons a:hover,
 .buttons a:active {
-    display: grid;
+    display: block;
     position: absolute;
     bottom: 0;
     width: 100%;
